--- a/index.html
+++ b/index.html
@@ -35,27 +35,6 @@
 
 <body>
 
-    <!--====== PRELOADER PART START ======-->
-
-<!--     <div class="preloader">
-        <div class="loader_34">
-            <div class="ytp-spinner">
-                <div class="ytp-spinner-container">
-                    <div class="ytp-spinner-rotator">
-                        <div class="ytp-spinner-left">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                        <div class="ytp-spinner-right">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!--====== PRELOADER ENDS START ======-->
-
     <!--====== HEADER PART START ======-->
 
     <header id="home" class="header-area">
@@ -101,10 +80,10 @@
                 <img src="assets/images/banner/shape/shape-3.png" alt="Shape">
             </div> <!-- header shape -->
             <div class="header-shape shape-fore layer" data-depth="0.60">
-                <img src="assets/images/banner/shape/shape-2.png" alt="Shape">
+                <img src="assets/images/banner/shape/shape-8.png" alt="Shape">
             </div> <!-- header shape -->
             <div class="header-shape shape-five layer" data-depth="0.20">
-                <img src="assets/images/banner/shape/shape-1.png" alt="Shape">
+                <img src="assets/images/banner/shape/shape-7.png" alt="Shape">
             </div> <!-- header shape -->
             <div class="header-shape shape-six layer" data-depth="0.15">
                 <img src="assets/images/banner/shape/shape-4.png" alt="Shape">
@@ -119,7 +98,7 @@
                 <img src="assets/images/banner/shape/shape-6.png" alt="Shape">
             </div> <!-- header shape -->
             <div class="header-shape shape-ten layer" data-depth="0.30">
-                <img src="assets/images/banner/shape/shape-3.png" alt="Shape">
+                <img src="assets/images/banner/shape/shape-1.png" alt="Shape">
             </div> <!-- header shape -->
             <div class="container">
                 <div class="row align-items-center">
@@ -144,8 +123,6 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/Sajida.N.Ibrahim" target="_blank"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="https://twitter.com/Saj28ida" target="_blank"><i class="lni-twitter-original"></i></a></li>
                                     <li><a href="https://github.com/saj28ida" target="_blank"><i class="lni-github-original"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/sajida-ibrahim-18543b65/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
@@ -175,7 +152,7 @@
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
                         <h5 class="about-title">Hi There! I'm Sajida Ibrahim</h5>
-                        <p>I studied CIS Computer Information Systems at Zarqa University. I worked as receptionist in Boushahri Medical Group in Kuwait more than six years. Recently I took a course in frontend developer in HTU Hussain Technical University.</p>
+                        <p>I studied CIS Computer Information Systems at Zarqa University. I worked as receptionist in Boushahri Medical Group in Kuwait more than six years. Recently I took a course in frontend developer in HTU Hussain Technical University, which contain HTML, CSS and JAVASCRIPT.</p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -183,7 +160,7 @@
                                         <i class="lni-calendar"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Date of birth:</span> 28 June 1987</p>
+                                        <p><span>Date of birth:</span><br> 28 June 1987</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -193,7 +170,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> saj.28@hotmail.com</p>
+                                        <p><span>Email:</span><br> sajida.ibrahim87@gmail.com</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -203,7 +180,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +962-78-800-9929</p>
+                                        <p><span>Phone:</span><br> +962-78-800-9929</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -213,7 +190,7 @@
                                         <i class="lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Location:</span> Zarqa, Jordan</p>
+                                        <p><span>Location:</span><br> Zarqa, Jordan</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -373,34 +350,13 @@
 
     <!--====== SERVICES PART ENDS ======-->
 
-    <!--====== CALL TO ACTION PART START ======-->
-
-    <section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover" style="background-image: url(assets/images/call-to-action.jpg)">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-8 col-lg-9">
-                    <div class="call-action-content text-center">
-                        <h2 class="action-title">My Resume</h2>
-                        <p>You can download or preview my resume in below buttons  .</p>
-                        <ul>
-                            <li><a href="https://drive.google.com/uc?authuser=0&id=1mC9ND8oYdgzYdCyjadIh_w1OHBOel54H&export=download" target="_blank" class="main-btn custom">download</a></li>
-                            <li><a href="https://drive.google.com/file/d/1mC9ND8oYdgzYdCyjadIh_w1OHBOel54H/view?usp=sharing" target="_blank" class="main-btn custom-2">preview</a></li>
-                        </ul>
-                    </div> <!-- call action content -->
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </section>
-
-    <!--====== CALL TO ACTION PART ENDS ======-->
-
     <!--====== WORK PART START ======-->
 
-    <section id="work" class="work-area gray-bg pt-125 pb-130">
+    <section id="work" class="work-area pt-125 pb-130">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="section-title pb-25">
+                    <div class="section-title pb-25 text-center">
                         <h2 class="title">My Projects</h2>
                         <p></p>
                     </div> <!-- section title -->
@@ -416,7 +372,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">E-Commerce Website</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-11full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/Mobile_Covers/" target="_blank"><i class="lni-plus" title="Live Preview"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/Mobile_Covers.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -448,7 +404,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">Chocolate Store Website</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-13full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/Chocolate-Lovers/" target="_blank"><i class="lni-plus" title="Live Preview"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/Chocolate-Lovers.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -464,7 +420,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">Medical Website</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-14full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/shufflehound/" target="_blank"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/shufflehound.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -480,7 +436,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">Universiry Website</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-15full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/University/" target="_blank"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/University.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -518,7 +474,7 @@
 
     <!--====== BLOG PART START ======-->
 
-    <section id="blog" class="blog-area pt-125 pb-130">
+    <section id="blog" class="blog-area gray-bg pt-125 pb-130">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -559,7 +515,7 @@
 
     <!--====== CONTACT PART START ======-->
 
-    <section id="contact" class="contact-area pt-125 pb-130 gray-bg">
+    <section id="contact" class="contact-area pt-125 pb-130">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -613,10 +569,31 @@
 
     <!--====== CONTACT PART ENDS ======-->
 
+    <!--====== CALL TO ACTION PART START ======-->
+
+    <section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover" style="background-image: url(assets/images/call-to-action.jpg)">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8 col-lg-9">
+                    <div class="call-action-content text-center">
+                        <h2 class="action-title">My Resume</h2>
+                        <p>You can download or preview my resume in below buttons  .</p>
+                        <ul>
+                            <li><a href="https://drive.google.com/uc?authuser=0&id=1xcCaYJ2L2khEtwFiLwCSooP1nofv2fOg&export=download" class="main-btn custom">download</a></li>
+                            <li><a href="https://drive.google.com/file/d/1xcCaYJ2L2khEtwFiLwCSooP1nofv2fOg/view?usp=sharing" target="_blank" class="main-btn custom-2">preview</a></li>
+                        </ul>
+                    </div> <!-- call action content -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== CALL TO ACTION PART ENDS ======-->
+
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer-area">
-        <div class="footer-widget pt-130 pb-130">
+        <div class="footer-widget pt-50 pb-50">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -630,17 +607,6 @@
                                 <li><a href="https://www.linkedin.com/in/sajida-ibrahim-18543b65/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
-                    </div>
-                </div> <!-- row -->
-            </div> <!-- container -->
-        </div> <!-- footer widget -->
-        <div class="footer-copyright pb-20">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2019. Template Crafted by <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
-                        </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
