--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     <!--====== ABOUT PART ENDS ======-->
 
-    <!--====== SERVICES PART START ======-->
+    <!--====== SKILLS PART START ======-->
 
     <section id="service" class="services-area gray-bg pt-125 pb-130">
         <div class="container">
@@ -292,7 +292,7 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">HTML, HTML5</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
@@ -302,7 +302,7 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#contact">CSS, CSS3</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
@@ -312,7 +312,7 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">GITHUB</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
@@ -322,7 +322,7 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">BOOTSTRAP</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
@@ -332,7 +332,7 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">JAVA SCRIPT</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
@@ -342,15 +342,25 @@
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">jQUERY</a></h4>
                         </div>
-                    </div> <!-- single service -->
+                    </div> <!-- single skill -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-service text-center mt-30">
+                        <div class="service-icon">
+                            <i class="lni-seo"></i>
+                        </div>
+                        <div class="service-content">
+                            <h4 class="service-title"><a href="#">SEO</a></h4>
+                        </div>
+                    </div> <!-- single skill -->
                 </div>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
 
-    <!--====== SERVICES PART ENDS ======-->
+    <!--====== SKILLS PART ENDS ======-->
 
-    <!--====== WORK PART START ======-->
+    <!--====== PROJECTS PART START ======-->
 
     <section id="work" class="work-area pt-125 pb-130">
         <div class="container">
@@ -388,7 +398,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">Animation Project</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-12full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/Animation/" target="_blank"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/Animation.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -452,7 +462,7 @@
                             <div class="work-content">
                                 <h3 class="work-title">First Project in HTML only</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-16full.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://saj28ida.github.io/HtmlProject/" target="_blank"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://github.com/Saj28ida/HtmlProject.git" target="_blank"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -470,9 +480,9 @@
         </div> <!-- container -->
     </section>
 
-    <!--====== WORK PART ENDS ======-->
+    <!--====== PROJECTS PART ENDS ======-->
 
-    <!--====== BLOG PART START ======-->
+    <!--====== EDUCATION PART START ======-->
 
     <section id="blog" class="blog-area gray-bg pt-125 pb-130">
         <div class="container">
@@ -505,13 +515,13 @@
                                 </ul>
                             </div>
                         </div>
-                    </div> <!-- single pricing -->
+                    </div> <!-- single eduction -->
                 </div>
 
         </div> <!-- container -->
     </section>
 
-    <!--====== BLOG PART ENDS ======-->
+    <!--====== EDUCATION PART ENDS ======-->
 
     <!--====== CONTACT PART START ======-->
 
@@ -569,7 +579,7 @@
 
     <!--====== CONTACT PART ENDS ======-->
 
-    <!--====== CALL TO ACTION PART START ======-->
+    <!--====== RESUME PART START ======-->
 
     <section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover" style="background-image: url(assets/images/call-to-action.jpg)">
         <div class="container">
@@ -588,7 +598,7 @@
         </div> <!-- container -->
     </section>
 
-    <!--====== CALL TO ACTION PART ENDS ======-->
+    <!--====== RESUME PART ENDS ======-->
 
     <!--====== FOOTER PART START ======-->
 
